# routes/categories.routes.js
@@ -1,7 +1,7 @@
 import express from 'express'
-import * as controllers from '../controllers/cateories.controllers.js'
+import * as controllers from '../controllers/categories.controllers.js'
 import { AuthenticateAdmin, AuthenticateUser } from '../middleware/auth.js'
-import { uploadMiddleware } from '../controllers/cateories.controllers.js'
+import { uploadMiddleware } from '../controllers/categories.controllers.js'
 
 const router = express.Router()
 
@@ -10,10 +10,19 @@ router.post('/createCategory', AuthenticateAdmin, uploadMiddleware, controllers.
 router.post('/updateCategory', AuthenticateAdmin, uploadMiddleware, controllers.updateCategory)
 router.post('/deleteCategory', AuthenticateAdmin, controllers.deleteCategory)
 
+//POST GENRE
+router.post('/createGenre', AuthenticateAdmin, uploadMiddleware, controllers.createGenre)
+router.post('/updateGenre', AuthenticateAdmin, uploadMiddleware, controllers.updateGenre)
+router.post('/deleteGenre', AuthenticateAdmin, controllers.deleteGenre)
+
+
 //GET ROUTES
 router.get('/getAllCategory', controllers.getAllCategory)
 router.get('/getCategory/:categorySlug', controllers.getCategory)
 
+//GET GENRE
+router.get('/getAllGenre', controllers.getAllGenre)
+router.get('/getGenre/:genreSlug', controllers.getGenre)
 
 //PUT ROUTES
 
